--- a/HawksGo2/app/src/main/res/layout/activity_calendar.xml
+++ b/HawksGo2/app/src/main/res/layout/activity_calendar.xml
@@ -5,16 +5,34 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".Calendar"
+    android:background="@color/colorPrimaryDark"
 
     >
 
     <CalendarView
         android:id="@+id/cooperCalendar"
-        android:layout_width="362dp"
-        android:layout_height="353dp"
+        android:layout_width="353dp"
+        android:layout_height="0dp"
+        android:layout_marginBottom="79dp"
+        android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
-        android:background="@color/colorPrimaryDark"
+        android:background="@android:color/white"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.533"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/backButton" />
+
+    <Button
+        android:id="@+id/backButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="15dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
+        android:text="Go Back"
+        app:layout_constraintBottom_toTopOf="@+id/cooperCalendar"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_chainStyle="spread_inside" />
 </android.support.constraint.ConstraintLayout>
