--- a/HawksGo2/app/src/main/res/layout/activity_school_closings.xml
+++ b/HawksGo2/app/src/main/res/layout/activity_school_closings.xml
@@ -16,4 +16,17 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="145dp"
+        android:layout_height="125dp"
+        android:background="@color/colorPrimaryDark"
+        android:fadingEdge="horizontal"
+        android:text="The School is Open!"
+        android:textColor="@android:color/white"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
 </android.support.constraint.ConstraintLayout>
