--- a/HawksGo2/app/src/main/res/layout/activity_school_closings.xml
+++ b/HawksGo2/app/src/main/res/layout/activity_school_closings.xml
@@ -4,7 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".schoolClosings">
+    tools:context=".schoolClosings"
+    android:background="@color/colorPrimary"
+    >
 
     <Button
         android:id="@+id/backButton"
@@ -13,6 +15,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
         android:text="Go Back"
+        android:background="@color/colorAccent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -20,10 +23,10 @@
         android:id="@+id/textView"
         android:layout_width="145dp"
         android:layout_height="125dp"
-        android:background="@color/colorPrimaryDark"
+        android:background="@color/colorAccent"
         android:fadingEdge="horizontal"
         android:text="The School is Open!"
-        android:textColor="@android:color/white"
+        android:textColor="@android:color/black"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
