--- a/HawksGo2/app/src/main/res/layout/activity_school_closings.xml
+++ b/HawksGo2/app/src/main/res/layout/activity_school_closings.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".schoolClosings"
-    android:background="@color/colorPrimary"
+    android:background="@color/colorPrimaryDark"
     >
 
     <Button
