--- a/HawksGo2/app/src/main/res/layout/activity_school_closings.xml
+++ b/HawksGo2/app/src/main/res/layout/activity_school_closings.xml
@@ -20,7 +20,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/openStatus"
         android:layout_width="145dp"
         android:layout_height="125dp"
         android:background="@drawable/rounded_gray"
