--- a/HawksGo2/app/src/main/res/layout/activity_lunch_menu.xml
+++ b/HawksGo2/app/src/main/res/layout/activity_lunch_menu.xml
@@ -16,12 +16,12 @@
         android:layout_marginTop="16dp"
         android:text="Go Back"
         android:background="@drawable/round_highlight_button"
-        app:layout_constraintBottom_toTopOf="@+id/textView2"
+        app:layout_constraintBottom_toTopOf="@+id/grillLine"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/textView2"
+        android:id="@+id/grillLine"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginBottom="45dp"
@@ -31,13 +31,13 @@
         android:text="Line 1: Grill"
         android:textColor="@color/colorPrimaryDark"
         android:gravity="center_horizontal"
-        app:layout_constraintBottom_toTopOf="@+id/textView3"
+        app:layout_constraintBottom_toTopOf="@+id/mainLine"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/backButton" />
 
     <TextView
-        android:id="@+id/textView3"
+        android:id="@+id/mainLine"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginBottom="45dp"
@@ -47,13 +47,13 @@
         android:text="Line 2: Main"
         android:textColor="@color/colorPrimaryDark"
         android:gravity="center_horizontal"
-        app:layout_constraintBottom_toTopOf="@+id/textView4"
+        app:layout_constraintBottom_toTopOf="@+id/deliLine"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView2" />
+        app:layout_constraintTop_toBottomOf="@+id/grillLine" />
 
     <TextView
-        android:id="@+id/textView4"
+        android:id="@+id/deliLine"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginBottom="45dp"
@@ -66,6 +66,6 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView3" />
+        app:layout_constraintTop_toBottomOf="@+id/mainLine" />
 
 </android.support.constraint.ConstraintLayout>
